2016-09-12 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to post-ICHEP trigger pT thresholds for 2016
	* Add new 2016 GRL (v82-pro20-12, 18857.4 pb-1) and ilumicalc file

2016-08-18 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to AT,2.4.18
	* Add new 2016 GRL (v81, 15019.8 pb-1) and ilumicalc file

2016-08-10 Robert Wolff <robert.wolff@cern.ch>
	* add lowest unprescaled triggers in triggermatching for high-lumi runs
	* add some tH and VVV samples to submission scripts

2016-08-09 Robert Wolff <robert.wolff@cern.ch>
	* add x-section and k-factor branches from TopDataPreparation

2016-07-23 Robert Wolff <robert.wolff@cern.ch>
	* bugfix for OR flags for m_jet vectors

2016-07-22 Robert Wolff <robert.wolff@cern.ch>
	* prepare for v19 setup (manual change of TopObjectSelectionTools needed
	* added new GRL file for 2016 data 10514.3 pb-1

2016-07-21 Harish Potti <harish.potti@cern.ch>
	* add new Lumicalc files with new lumi tag OflLumi-13TeV-005.root

2016-07-20 David Hohn <david.hohn@cern.ch>
	* add truth higgs 4-vec and rapidity

2016-07-16 David Hohn <david.hohn@cern.ch>
	* Fix new Sherpa 2.2 RW

2016-07-16 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to AT,2.4.15
	* New PMGTool Z+jets Sherpa 2.2 RW functions - WARNING: not fully working!
	* New 2016 GRL (for lumi < 1e34)

2016-07-04 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to modified ASG OLR (MuJetPtRatio and MuJetTrkPtRatio disabled)
	* Include new MuonEfficiencyCorrections and IsolationCorrections locally

2016-07-04 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to Run-1 OLR (bug-fix)
	* Include new MuonEfficiencyCorrections and IsolationCorrections locally

2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to Run-1 OLR

2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>